--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
     }
 
     try {
-        const response = await fetch('https://domyscore-api.<ton-compte>.workers.dev/upload', {
+        const response = await fetch('https://domyscore-api.ranaivomandason.workers.dev/upload', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify(tempGames),
